--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="loading">Loading...</string>
     <string name="select_language">Select Language</string>
     <string name="watch_live_tv">Watch Live TV</string>
+    <string name="choose_newzfeed_n_language_categories"><![CDATA[Choose Newzfeed \n Language & Categories]]></string>
 </resources>
