--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="error_no_searched_stories">No Searched Stores Available</string>
     <string name="no_data_available">No Data Available!!</string>
     <string name="interstitial_full_screen">"ca-app-pub-5555315701324132/1665484702"</string>
-    <string name="latest_news">Latest News</string>
-    <string name="loading">Loading...</string>
+    <string name="latest_news">My News Feeds</string>
+    <string name="loading">Loading…</string>
     <string name="select_language">Select Language</string>
     <string name="watch_live_tv">Watch Live TV</string>
     <string name="choose_newzfeed_n_language_categories"><![CDATA[Choose Newzfeed \n Language & Categories]]></string>
